--- a/spec/fixtures/cassette_library/LinkedIn_Search/_search/by_first_name_and_last_name_options_with_fields.yml
+++ b/spec/fixtures/cassette_library/LinkedIn_Search/_search/by_first_name_and_last_name_options_with_fields.yml
@@ -1,72 +1,82 @@
 ---
-- !ruby/struct:VCR::HTTPInteraction
-  request: !ruby/struct:VCR::Request
-    method: :get
-    uri: https://api.linkedin.com:443/v1/people-search:(people:(id,first-name,last-name,public-profile-url,picture-url),num-results)?first-name=Giliardi&last-name=Pires
-    body: 
+http_interactions:
+- request:
+    method: get
+    uri: https://api.linkedin.com/v1/people-search:(people:(id,first-name,last-name,public-profile-url,picture-url),num-results)?first-name=Giliardi&last-name=Pires
+    body:
+      encoding: US-ASCII
+      string: ''
     headers:
-      user-agent:
+      User-Agent:
       - OAuth gem v0.4.4
-      authorization:
+      Authorization:
       - OAuth oauth_consumer_key="C2UfeHxZrij1PyppziDLbdUQti6f4TLaL-N0dyiV_us4Pj18_vsHcjKIX0i69fSn",
         oauth_nonce="p445iIZd1oQn2e1JL6M2ZbGEUi2nTMqacOQ4S1xeDY", oauth_signature="639UhE9asgiYLgUzBYUFrdIF%2BS8%3D",
         oauth_signature_method="HMAC-SHA1", oauth_timestamp="1305061366", oauth_token="afb39322-be32-4b83-83a0-7e35e18d3082",
         oauth_version="1.0"
-      x-li-format:
+      X-Li-Format:
       - json
-  response: !ruby/struct:VCR::Response
-    status: !ruby/struct:VCR::ResponseStatus
+  response:
+    status:
       code: 200
       message: OK
     headers:
-      content-type:
+      Content-Type:
       - application/json;charset=UTF-8
-      server:
+      Server:
       - Apache-Coyote/1.1
-      date:
+      Date:
       - Tue, 10 May 2011 21:02:47 GMT
-      x-li-format:
+      X-Li-Format:
       - json
-      vary:
+      Vary:
       - x-li-format,Accept-Encoding
-      transfer-encoding:
+      Transfer-Encoding:
       - chunked
-    body: ! "{\n  \"numResults\": 1,\n  \"people\": {\n    \"values\": [{\n      \"id\":
-      \"YkdnFl04s_\",\n      \"publicProfileUrl\": \"http://www.linkedin.com/in/gibanet\",\n
-      \     \"lastName\": \"Pires\",\n      \"pictureUrl\": \"http://media.linkedin.com/mpr/mprx/0_Oz05kn9xkWziAEOUKtOVkqzjXd8Clf7UyqIVkqchR2NtmwZRt1fWoN_aobhg-HmB09jUwPLKrAhU\",\n
-      \     \"firstName\": \"Giliardi\"\n    }],\n    \"_total\": 1\n  }\n}"
+    body:
+      encoding: UTF-8
+      string: ! "{\n  \"numResults\": 1,\n  \"people\": {\n    \"values\": [{\n      \"id\":
+        \"YkdnFl04s_\",\n      \"publicProfileUrl\": \"http://www.linkedin.com/in/gibanet\",\n
+        \     \"lastName\": \"Pires\",\n      \"pictureUrl\": \"http://media.linkedin.com/mpr/mprx/0_Oz05kn9xkWziAEOUKtOVkqzjXd8Clf7UyqIVkqchR2NtmwZRt1fWoN_aobhg-HmB09jUwPLKrAhU\",\n
+        \     \"firstName\": \"Giliardi\"\n    }],\n    \"_total\": 1\n  }\n}"
     http_version: '1.1'
-- !ruby/struct:VCR::HTTPInteraction
-  request: !ruby/struct:VCR::Request
-    method: :post
-    uri: https://api.linkedin.com:443/uas/oauth/requestToken
-    body: 
+  recorded_at: Tue, 01 May 2012 03:16:40 GMT
+- request:
+    method: post
+    uri: https://api.linkedin.com/uas/oauth/requestToken
+    body:
+      encoding: US-ASCII
+      string: ''
     headers:
-      user-agent:
+      User-Agent:
       - OAuth gem v0.4.5
-      content-length:
+      Content-Length:
       - '0'
-      authorization:
+      Authorization:
       - OAuth oauth_body_hash="2jmj7l5rSw0yVb%2FvlWAYkK%2FYBwk%3D", oauth_callback="oob",
         oauth_consumer_key="a39e395e-bc38-4d5b-ae3b-52f840f821e9", oauth_nonce="bcBcCa4GrHRyxuMfyrnwxQahY2zkrQVUhRhpQDhfA",
         oauth_signature="3d%2FocgY%2FpjVNVXL2Ud9aIAWyBCQ%3D", oauth_signature_method="HMAC-SHA1",
         oauth_timestamp="1329922227", oauth_version="1.0"
-  response: !ruby/struct:VCR::Response
-    status: !ruby/struct:VCR::ResponseStatus
+  response:
+    status:
       code: 401
       message: Unauthorized
     headers:
-      server:
+      Server:
       - Apache-Coyote/1.1
-      www-authenticate:
+      Www-Authenticate:
       - OAuth realm="https%3A%2F%2Fapi.linkedin.com", oauth_problem="consumer_key_unknown"
-      content-type:
+      Content-Type:
       - application/x-www-form-urlencoded;charset=UTF-8
-      content-length:
+      Content-Length:
       - '34'
-      vary:
+      Vary:
       - Accept-Encoding
-      date:
+      Date:
       - Wed, 22 Feb 2012 14:50:29 GMT
-    body: oauth_problem=consumer_key_unknown
+    body:
+      encoding: UTF-8
+      string: oauth_problem=consumer_key_unknown
     http_version: '1.1'
+  recorded_at: Tue, 01 May 2012 03:16:40 GMT
+recorded_with: VCR 2.1.1
